# bucketing-rs

./: .gitignore  AGENTS.md  BUILD.md  Cargo.toml  PROTOBUF.md  README.md  build.rs  build.sh  cbindgen.toml
.github/workflows/: ci.yml  crate-publish.yml  release.yml
examples/csharp/DevCycleFFI/: DevCycleClient.cs  DevCycleFFI.csproj  NativeMethods.cs  Program.cs  SafeHandles.cs
proto/: config.proto
src/: bucketing.rs  bucketing_tests.rs  client_custom_data.rs  config.rs  config_tests.rs  configmanager.rs  configmanager_tests.rs  constants.rs  errors.rs  event.rs  event_queue.rs  event_queue_manager.rs  event_queue_tests.rs  feature.rs  ffi.rs  filter_tests.rs  filters.rs  lib.rs  murmurhash.rs  murmurhash_tests.rs  platform_data.rs  platform_data_tests.rs  protobuf.rs  protobuf_tests.rs  target.rs  user.rs  versioncompare.rs  wasm.rs
src/bucketing/: bucketing.rs  bucketing_benches.rs  bucketing_tests.rs  mod.rs
src/config/: client_custom_data.rs  config.rs  config_tests.rs  configmanager.rs  configmanager_tests.rs  feature.rs  mod.rs  platform_data.rs  platform_data_tests.rs
src/events/: event.rs  event_queue.rs  event_queue_manager.rs  event_queue_tests.rs  event_tests.rs  mod.rs
src/segmentation/: filter_tests.rs  filters.rs  mod.rs  target.rs  versioncompare.rs
src/user/: mod.rs  platform_data.rs  platform_data_tests.rs  user.rs
src/util/: constants.rs  errors.rs  mod.rs  murmurhash.rs  murmurhash_tests.rs
tests/resources/: test_config.json
