[package]
name = "devcycle-bucketing-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
murmur3 = "0.5.2"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.21.3"
semver = "1.0"
hostname = "0.4"
