[package]
name = "devcycle-bucketing-rs"
version = "0.1.0"
edition = "2021"

[lib]
# Support multiple crate types for different targets
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
murmur3 = "0.5.2"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.21.3"
semver = "1.0"
hostname = "0.4"

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# FFI-specific dependencies
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Use wasm-compatible alternatives when targeting WASM
reqwest = { version = "0.12.23", features = ["json"], default-features = false }
tokio = { version = "1.0", features = ["sync", "macros", "rt"] }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen", "console_error_panic_hook"]
ffi = ["libc"]

[[bench]]
name = "bucketing_benchmarks"
harness = false
path = "src/bucketing/bucketing_benches.rs"

[profile.release]
# Optimize for size when building WASM
opt-level = "s"
lto = true
