[package]
name = "devcycle-bucketing-rs"
version = "0.2.2"
edition = "2024"
description = "DevCycle Bucketing Library in Rust"
license = "MIT"
[lib]
# Support multiple crate types for different targets
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
murmur3 = "0.5.2"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
once_cell = "1.21.3"
semver = "1.0"
cfg-if = "1.0"

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# FFI-specific dependencies
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.12.23", features = ["json"] }

[target.'cfg(target_family = "wasm")'.dependencies]
# Use wasm-compatible alternatives when targeting WASM (wasm32-unknown-unknown, wasm32-wasi, etc.)
reqwest = { version = "0.12.23", features = ["json"], default-features = false }
tokio = { version = "1.0", features = ["sync", "macros", "rt"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
hostname = "0.4"

[features]
default = ["libc"]
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "serde-wasm-bindgen",
    "console_error_panic_hook",
]

[[bench]]
name = "bucketing_benchmarks"
harness = false
path = "src/bucketing/bucketing_benches.rs"

[profile.release]
# Optimize for size when building WASM
opt-level = "s"
lto = true
